fix: word wrapping error in restaurant cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,70 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
+body,
+td,
+th,
+p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 	line-height: 1.5;
 }
+
 body {
 	background-color: #f3f3f3;
   position:relative;
   margin: 0 auto;
 }
-ul, ol, li {
+
+ul, 
+ol, 
+li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 }
+
 a {
 	color: orange;
 	text-decoration: none;
 }
-a:hover, a:focus {
+
+a:hover, 
+a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
+
 a img{
 	border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+
+article, 
+aside, 
+canvas, 
+details, 
+figcaption, 
+figure, 
+footer, 
+header, 
+hgroup, 
+menu, 
+nav, 
+section {
 	display: block;
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -43,6 +73,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   max-width: 1050px;
   margin: 0 auto;
 }
+
 #footer {
   background-color: #444;
   color: #aaa;
@@ -63,10 +94,12 @@ nav {
   background-color: #252831;
   text-align:center;
 }
+
 nav h1 {
   margin: auto;
   padding: 20px;
 }
+
 nav h1 a {
   color: #fff;
   font-size: 20px;
@@ -74,6 +107,7 @@ nav h1 a {
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
     padding: 10px;
     list-style: none;
@@ -106,12 +140,14 @@ nav h1 a {
     color: #01447e;
     text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
 #map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
@@ -119,6 +155,7 @@ nav h1 a {
   align-items: center;
   padding: 20px 0;
 }
+
 .filter-options h2 {
   color: white;
   font-size: 1rem;
@@ -126,6 +163,7 @@ nav h1 a {
   line-height: 1;
   margin: 0 20px;
 }
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
@@ -156,6 +194,7 @@ nav h1 a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-width: 270px;
 }
 
 #restaurants-list li {
@@ -173,8 +212,7 @@ nav h1 a {
   background-color: #ccc;
   display: block;
   margin: 0;
-  max-width: 100%;
-  min-width: 100%;
+  width: 100%;
 }
 
 #restaurants-list li h2 {
@@ -235,7 +273,7 @@ nav h1 a {
 
 @media only screen and (min-width: 800px) and (max-width: 1032px) {
   #restaurants-list li h2 {
-    font-size: 18pt;
+    font-size: 2em;
   }
 
   #restaurants-list li p {
@@ -305,11 +343,13 @@ nav h1 a {
   text-transform: uppercase;
 }
 
-#restaurant-container, #reviews-container {
+#restaurant-container, 
+#reviews-container {
   width: 100%;
 }
 
-#reviews-container h3, #restaurant-hours-container h3 {
+#reviews-container h3, 
+#restaurant-hours-container h3 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
